--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,12 @@
     <link rel="stylesheet" href="./css/estilos.css">
 </head>
 <body>
-    <h1>Aqui vamos hacer un blog</h1>
-    <p>Este es el parrafo del ini</p>
+    <div id="container">
+        <div id="post">
+            <h1>Este es el título atractivo e interesante del post</h1>
+            <p>Este es el parrafo de inicio donde vamoa a explicar las cosas increibles que se pueden hacer con ramas </p>   
+        </div>
+    </div>
+    
 </body>
 </html>
