--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
     <div id="container">
         <div id="cabecera">
             Hyperblog
-            <span id="tagline">Tu blog de confianza</span>
+            <span id="tagline">Tu blog maestro</span>
         </div>
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
@@ -16,6 +16,7 @@
                 Los blogs son la mejor forma compartir información y tus ideas.
                 Mucho mas que ir a conferencias o salir en youtube
             </p>
+            <p>suscribete y dale like...</p>
         </div>
     </div>
     
