--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Titulo del post</title>
+    <title>Bienvenido a mi blog</title>
     <link rel="stylesheet" href="./css/estilos.css">
 </head>
 <body>
